# pyrumi-bot

./: README.md  agent.py  main.py  pyproject.toml  pyrumi-bot.plist
.github/workflows/: deploy.yml  deployment.yaml  python.yml
pyrumi/: bot.py  chatgpt.py  cli.py  langchain_bot.py  stock_tool.py  whitelist.py  yf_utils.py
pyrumi/agents/: __init__.py  chatgpt.py  lc.py
pyrumi/tools/: __init__.py  pornhub.py  stock.py  web_browser.py
