[tool.poetry]
name = "pyrumi"
version = "0.1.0"
description = ""
authors = ["なるみ"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
openai = "^0.27.1"
python-telegram-bot = "^20.1"
loguru = "^0.6.0"
python-dotenv = "^1.0.0"
click = "^8.1.3"
langchain = "^0.0.207"
yfinance = "^0.2.20"
unstructured = "^0.7.7"
duckduckgo-search = "^3.8.3"
arxiv = "^1.4.7"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
yapf = "^0.32.0"
pytest = "^7.2.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyrumi = "pyrumi.cli:main"
